workload/services/media-server/resources/jellyfin/statefulset-jellyfin.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      serviceAccountName: wait-for-job
      automountServiceAccountToken: false

      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault

      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: openebs.io/nodeid
                    operator: In
                    values:
                      - talos-o52-6k4

      restartPolicy: Always

      containers:
        - name: jellyfin
          image: ghcr.io/jellyfin/jellyfin:10.11.7-amd64.20260401-001704@sha256:3607f9a27a9b03861ae67410b094cbec0d27ede212c87068f957044c4b2793f6
          livenessProbe:
            httpGet:
              path: /health
              port: 8096
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 8096
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          volumeMounts:
            - name: data
              mountPath: /data/media
              subPath: media
            - name: config
              mountPath: /config
              subPath: jellyfin
            - name: jellyfin-tmp
              mountPath: /tmp
            - name: jellyfin-cache
              mountPath: /cache
          ports:
            - containerPort: 8096

      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: media-server-config
        - name: data
          persistentVolumeClaim:
            claimName: media-server
        - name: jellyfin-cache
          emptyDir: {}
        - name: jellyfin-tmp
          emptyDir: {}
        - name: sa-token
          projected:
            sources:
              - serviceAccountToken:
                  path: token
                  expirationSeconds: 600
              - configMap:
                  name: kube-root-ca.crt
                  items:
                    - key: ca.crt
                      path: ca.crt
              - downwardAPI:
                  items:
                    - path: namespace
                      fieldRef:
                        fieldPath: metadata.namespace
